<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rishabh.meddela.TimeTable"
    tools:showIn="@layout/activity_time_table">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="Time Table"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <!--<Button-->
        <!--android:id="@+id/addbutton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="add" />-->

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="0"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/day_1_long"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/listview1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="0"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/day_2_long"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/listview2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="0"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/day_3"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/listview3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="0"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/day_4"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/listview4"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="0"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/day_5"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/listview5"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_row="1" />


    </GridLayout>

    <Spinner
        android:id="@+id/ttSpinnerDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ttSpinnerDay"
        android:layout_marginTop="20dp">


        <GridLayout
            android:id="@+id/ttgridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:columnCount="3">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:padding="15dp"
                android:text="Sr. No."
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ttgridhead1"
                android:layout_column="1"
                android:layout_marginEnd="1dp"
                android:layout_row="0"
                android:background="@color/colorPrimaryDark"
                android:padding="15dp"
                android:text="loading.."
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ttgridhead2"
                android:layout_column="2"
                android:layout_marginStart="1dp"
                android:layout_row="0"
                android:background="@color/colorPrimaryDark"
                android:padding="15dp"
                android:text="loading.."
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:padding="10dp"
                android:text="1"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:padding="10dp"
                android:text="2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:padding="10dp"
                android:text="3"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="4"
                android:padding="10dp"
                android:text="4"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="5"
                android:padding="10dp"
                android:text="5"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="6"
                android:padding="10dp"
                android:text="6"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_column="0"
                android:layout_row="7"
                android:padding="10dp"
                android:text="7"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub1"
                android:layout_column="1"
                android:layout_row="1"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub2"
                android:layout_column="1"
                android:layout_row="2"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub3"
                android:layout_column="1"
                android:layout_row="3"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub4"
                android:layout_column="1"
                android:layout_row="4"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub5"
                android:layout_column="1"
                android:layout_row="5"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub6"
                android:layout_column="1"
                android:layout_row="6"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ttsub7"
                android:layout_column="1"
                android:layout_row="7"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/tttea1"
                android:layout_column="2"
                android:layout_row="1"
                android:ems="4"
                android:maxEms="5"
                android:minEms="5"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea2"
                android:layout_column="2"
                android:layout_row="2"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea3"
                android:layout_column="2"
                android:layout_row="3"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea4"
                android:layout_column="2"
                android:layout_row="4"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea5"
                android:layout_column="2"
                android:layout_row="5"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea6"
                android:layout_column="2"
                android:layout_row="6"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tttea7"
                android:layout_column="2"
                android:layout_row="7"
                android:maxEms="5"
                android:minEms="4"
                android:padding="10dp"
                android:textColor="@android:color/white" />


        </GridLayout>


    </RelativeLayout>

</RelativeLayout>
